backend: filtering db collection + marshmallow for output validation
